# InfiniLM

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  DeepSeek-V4-flash  HONOR_CODE.md  HYGON_BEST_CONFIG_BENCH.md  IMPROVEMENTS.md  KVCACHE_COMPRESSION_PLAN.md  LICENSE  LLaDA_Implementation_Guide.md  MINICPM_SALA_BUILD_AND_CHANGES.md  MODELS.md  MODELS_ZH.md  MiniCPM_SALA_alignment_progress.md  README-技术文档导览.md  README.md  T2-1-2_伊里斯_赛题报告.md  TODO.md  attention对比.md  bench_metrics_metax_flashattn.md  build.sh  claude_code_env.sh  codex.md  configuration_lladamoe.py  deepseek_v4结构.md  guide_build_run_flashattn_metax.md  help.md  helper.py  jiuge.sh  llada.sh  log  log_run  main.py  midterm_tip.md  modeling_lladamoe.py  (+19 more)
android/: Cargo.toml  README.md
android-api/: Cargo.toml
android-api/src/: lib.rs
android/src/: channels.rs  lib.rs
causal-lm/: Cargo.toml
causal-lm/src/: chat_template.rs  lib.rs  tokenizer.rs
ccl/: CMakeLists.txt
ccl/src/: utils.h
ccl/src/infiniccl/: infiniccl.cc
csrc/core/: CMakeLists.txt
csrc/core/include/: infinicore.hpp
csrc/core/src/: utils.h
devices/cambricon-mlu/: Cargo.toml  build.rs  wrapper.h
devices/cambricon-mlu/src/: gather.rs  lib.rs  sample.rs
devices/common-cpu/: Cargo.toml
devices/common-cpu/src/: lib.rs
devices/nvidia-gpu/: Cargo.toml
devices/nvidia-gpu/src/: lib.rs
gguf/: Cargo.toml
gguf/src/: tokenizer.rs
lib-operators/: Cargo.toml  build.rs
lib-operators/src/: lib.rs
llama.cu/: Cargo.toml
llama.cu/src/: lib.rs  memory.rs
llama.cu/src/batch/: default.rs  mod.rs
llama.cu/src/exec/: engine.rs  engine_manager.rs  group.rs  mod.rs  model.rs  step.rs
llama.cu/src/load/: mod.rs
llama.cu/src/model/: chat_template.rs
llama.cu/src/op/: all_reduce.rs
llama.cu/src/utils/: mod.rs
models/llama/cambricon-mlu/: Cargo.toml
models/llama/common/: Cargo.toml
models/llama/common-cpu/: Cargo.toml
models/llama/cuda/: Cargo.toml
models/llama/nvidia-gpu/: Cargo.toml  build.rs
ops/: CMakeLists.txt
ops/include/: infiniccl.h  infinicore.hpp  infiniop.h
ops/include/infinicore/: device.hpp  nn.hpp  ops.hpp  tensor.hpp
ops/include/infiniop/: handle.h  operator_descriptor.h  tensor_descriptor.h
ops/src/infinicore/: device.cc  device_event.cc  dtype.cc  utils.hpp
ops/src/infiniop/: README.md  tensor.h  tensor_descriptor.cc
ops/src/utils/: check.h  infini_status_string.h
python/: bench.py  example.py  example_fixed_len.py  infllmv2_loader.py  pyproject.toml  test_ceval.py
python/icinfer/: __init__.py  config.py  llm.py  sampling_params.py
python/icinfer.egg-info/: PKG-INFO
python/icinfer/bench/: jiuge_ppl.py  launch_server.py  launch_server_v0.py  test_jiuge.py  test_perf.py  test_ppl.py
python/icinfer/engine/: block_manager.py  infer_task.py  kvcache_pool.py  libinfinicore_infer.py  llm_engine.py  llm_engine_async.py  model_runner.py  scheduler.py  sequence.py
python/icinfer/layers/: sampler.py
python/icinfer/models/: jiuge.py
python/icinfer/utils/: context.py  jiuge_weights_loader.py  loader.py
python/infinicore/: __init__.py  _preload.py  context.py  device.py  device_event.py  dtype.py  graph.py  tensor.py  utils.py
python/infinicore/lib/: __init__.py
python/infinicore/nn/: __init__.py  parameter.py
python/infinicore/ops/: __init__.py  acos.py  add.py  add_rms_norm.py  addbmm.py  addcmul.py  addr.py  all.py  argwhere.py  asin.py  asinh.py  atanh.py  attention.py  baddbmm.py  bilinear.py  binary_cross_entropy_with_logits.py  bitwise_right_shift.py  block_diag.py  broadcast_to.py  cat.py  cdist.py  cross_entropy.py  diff.py  digamma.py  dist.py  equal.py  flipud.py  float_power.py  floor.py  floor_divide.py  fmin.py  fmod.py  hypot.py  index_add.py  index_copy.py  inner.py  kron.py  kthvalue.py  kv_caching.py  ldexp.py  (+29 more)
python/infinilm/: __init__.py  auto_config.py  backend_plugins.py  base_config.py  cache_utils.py  configuration_utils.py  exception_utils.py  fused_infer_engine.py  fusion_utils.py  infer_engine.py  infllmv2_loader.py  modeling_utils.py  moe_config.py  tokenizer_utils.py
python/infinilm/cache/: __init__.py  cache.py
python/infinilm/compile/: __init__.py  aot_hpcc_patch.py  backbone.py  config.py  cudagraph_buffers.py  cudagraph_capture.py  cudagraph_dispatcher.py  cudagraph_pools.py  cudagraph_runtime.py  env.py  hybrid_prefill.py  mem_profile.py  piecewise_bootstrap_plan.py  piecewise_moe_segment.py  piecewise_segments.py  runner.py  verify.py  weights.py
python/infinilm/config/: __init__.py  engine_config.py  kv_transfer.py
python/infinilm/core/: __init__.py  context.py  device.py  device_event.py  dtype.py  graph.py  request.py  scheduler.py  tensor.py  utils.py
python/infinilm/distributed/: __init__.py  dist_config.py  pipeline_transport.py
python/infinilm/generation/: __init__.py  utils.py  utils_ceng.py
python/infinilm/kernels/: __init__.py  fused_moe_runtime.py  moe_guards.py
python/infinilm/kv_connector/: __init__.py  base.py  factory.py
python/infinilm/lib/: __init__.py
python/infinilm/llm/: __init__.py  cache_manager.py  context_limit.py  engine_config.py  llm.py  request.py  sampling_params.py  scheduler.py  static_scheduler.py
python/infinilm/models/: __init__.py  quant_config.py
python/infinilm/multimodal/: __init__.py  features.py  multimodal.py
python/infinilm/plugins/: __init__.py  (+1 more)
python/tests/: test_attention.py  test_cache_reclaim.py  test_concurrent_inference_routing.py  test_cudagraph_dispatcher.py  test_cudagraph_policy_entry.py  test_detokenize_incremental.py  test_fm9g_mup_scales.py  test_metadata_collectors.py  test_openai_compat.py  test_processor_v1_rows.py  test_reasoning_parser.py  test_scheduler_pack.py  test_scheduler_v1.py  test_server_itl_metrics.py  test_server_observability.py  test_update_requests_aborted.py
runtime/: CMakeLists.txt
runtime/include/: infinicore.h  infinirt.h
service/: Cargo.toml
service/src/: lib.rs
tensor/: Cargo.toml
tensor/src/: tensor.rs
xtask/: Cargo.toml
xtask/src/: bench.rs  generate.rs  main.rs
(+4339 files in other folders)
