[workspace]
members = [
    "common",
    "gguf",
    "tensor",
    "test-utils",

    "models/llama/common",
    "models/llama/common-cpu",
    "models/llama/opencl",
    "models/llama/infini",
    "models/llama/nvidia-gpu",

    "models/clip/common",
    "models/clip/common-cpu",

    "models/gpt2/common",
    "models/gpt2/common-cpu",
]
resolver = "2"

[workspace.dependencies]
common.path = "common"
gguf.path = "gguf"
tensor.path = "tensor"
causal-lm.path = "causal-lm"
test-utils = { path = "test-utils", default-features = false }

ggus = "0.4"
ndarray-layout = "0.0"
log = "0.4"
regex = "1.11"
itertools = "0.13"
env_logger = "0.11"
build-script-cfg = "0.0"

operators = { git = "https://github.com/YdrMaster/operators-rs", rev = "df027a4", default-features = false }

search-cl-tools = { git = "https://github.com/InfiniTensor/clrt", rev = "9b6289d" }
search-infini-tools = { git = "https://github.com/InfiniTensor/infini-rt", rev = "f40bcb5" }
search-cuda-tools = { git = "https://github.com/YdrMaster/cuda-driver", rev = "b064bfb" }
search-corex-tools = { git = "https://github.com/YdrMaster/cuda-driver", rev = "b064bfb" }
