[workspace]
members = [
    "common",
    "gguf",
    "tensor",
    "test-utils",

    "models/llama/common",
    "models/llama/common-cpu",
    "models/llama/opencl",
    "models/llama/infini",
    "models/llama/cuda",

    "models/clip/common",
    "models/clip/common-cpu",

    "models/gpt2/common",
    "models/gpt2/common-cpu",
    "models/gpt2/cuda",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
common.path = "common"
gguf.path = "gguf"
tensor.path = "tensor"
causal-lm.path = "causal-lm"
test-utils.path = "test-utils"

ggus = { git = "https://github.com/InfiniTensor/gguf", rev = "23c362f" }
ndarray-layout = "0.1"
log = "0.4"
regex = "1.11"
itertools = "0.13"
env_logger = "0.11"
build-script-cfg = "0.0"

operators = { git = "https://github.com/YdrMaster/operators-rs", rev = "ed28f2d", default-features = false }

search-cl-tools = { git = "https://github.com/InfiniTensor/clrt", rev = "f69b160" }
search-infini-tools = { git = "https://github.com/InfiniTensor/infini-rt", rev = "e8362c3" }
search-cuda-tools = { git = "https://github.com/YdrMaster/cuda-driver", rev = "f3ffbcc" }
search-corex-tools = { git = "https://github.com/YdrMaster/cuda-driver", rev = "f3ffbcc" }
