[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "InfiniLM"
version = "0.1.0"
description = "InfiniLM model implementations"
readme = "README.md"
dependencies = []
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/InfiniTensor/InfiniLM"
