[package]
name = "llama-cu"
version = "0.0.0"
edition.workspace = true

[dependencies]
operators = { git = "https://github.com/YdrMaster/operators-rs", rev = "13859bd", default-features = false, features = [
    "metax-gpu",
] }
nn = { git = "https://github.com/YdrMaster/InfiniNN", rev = "1fff7ec" }
ggus = { git = "https://github.com/InfiniTensor/gguf", rev = "23c362f" }
tokeneer = { git = "https://github.com/InfiniTensor/tokeneer", rev = "afbe38e" }

bytesize = "2.0"
log.workspace = true
regex.workspace = true
serde.workspace = true
memmap2 = "0.9"
lru = "0.14"
rand = "0.9"
minijinja = { version = "2.10", default-features = false, features = [
    "loader",
    "builtins",
    "serde",
] }

[build-dependencies]
bindgen = { version = "0.71" }
build-script-cfg = "0.1"
search-cuda-tools = { git = "https://github.com/YdrMaster/cuda-driver", rev = "106f0b6" }
search-maca-tools = { git = "https://github.com/YdrMaster/cuda-driver", rev = "106f0b6" }
